# ------------------------------------------------------------------------------
# project setup
# ------------------------------------------------------------------------------
project(waflz)
cmake_minimum_required(VERSION 3.5)
if (POLICY CMP0050)
    cmake_policy(SET CMP0050 OLD)
endif()
set(CMAKE_CXX_FLAGS "-Wall -Weffc++ -Werror -std=c++11")
# ------------------------------------------------------------------------------
# header files to install
# ------------------------------------------------------------------------------
LIST(APPEND INST_HDRS ${HDRS})
# ------------------------------------------------------------------------------
# include paths
# ------------------------------------------------------------------------------
include_directories(
    ${CMAKE_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
    # --------------------------------------------
    # proto
    # --------------------------------------------
    ${CMAKE_BINARY_DIR}/proto
    # --------------------------------------------
    # waflz support
    # --------------------------------------------
    ../../include
    # --------------------------------------------
    # waflz reuse
    # --------------------------------------------
    ../lib
    # --------------------------------------------
    # external libs
    # --------------------------------------------
    ../../ext
    # --------------------------------------------
    # Kooky modsecurity includes
    # --------------------------------------------
    ../../ext/modsecurity
    ../../ext/modsecurity/apache2
    /usr/include/libxml2
)
# ------------------------------------------------------------------------------
#
# ------------------------------------------------------------------------------
#add_definitions(-std=c++0x)
# ------------------------------------------------------------------------------
# source files
# ------------------------------------------------------------------------------
SET(SRCS wjc.cc)
# ------------------------------------------------------------------------------
# headers
# ------------------------------------------------------------------------------
SET(HDRS)
# ------------------------------------------------------------------------------
# build and install
# ------------------------------------------------------------------------------
add_executable(wjc_cmd ${HDRS} ${SRCS})
add_dependencies(wjc_cmd waflzcore)
SET_TARGET_PROPERTIES(wjc_cmd PROPERTIES OUTPUT_NAME "wjc")
target_link_libraries(wjc_cmd
        ${DEBUG_LIBRARIES}
        ${CMAKE_BINARY_DIR}/src/libwaflzcore.a
        ${LIBRARIES})
install(TARGETS wjc_cmd
        DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/
        COMPONENT Executables
        )